---- Changes since 1.430 ----
Don't pass the -g flag to BIND version 9 when starting without an init script.
Converted all forms to use the Webmin UI library, for a more consistent look and easier theming.
Moved buttons for deleting, moving and converting zones up to the page shown when you click on a zone name.
Switched to the new root zone file available from Internic.
Restrictions that apply to all zones in a view (such as allowed IPs for transfers and queries) can now be set on the Edit Client View page.
Made the Find Free IPs page visible, for finding addresses in a master zone that are not currently used.
Added a field to limit concurrent outgoing zone transfers and incoming transfers per nameserver to the Forwarding and Transfers page.
Ignore tailing dots in zone names in named.conf.
---- Changes since 1.440 ----
Moved the apply, stop and start buttons to the top-right corner of every page, so that you don't have to return all the way to the module's main page to apply configuration changes.
Zones can now be signed with DNSSEC, using one or two keys. This can be done automatically at master zone creation time, or later for existing zones. Signatures can also be removed or re-generated at any time. Zones with a key-signing and zone key can have their zone key automatically regenated on a regular interval.
Added the DNSSEC Verification page for configuring BIND to validate signatures on other zones, and to use DLV until the root zone is signed.
SPF records can now be added to or updated in multiple zones at once.
Added an icon to the main page for checking the whole BIND configuration including zone files, with the named-checkconf command.
Added a Module Config option to prevent inclusion of other slave's IP addresses in the master IP list for remote slaves.
---- Changes since 1.450 ----
Fixed the 'Directory for DNSSEC keys' option on the Module Config page so that it is actually used.